# command-line-rust

./: Cargo.toml  flake.nix
calr/: Cargo.toml
calr/src/: main.rs
calr/tests/: cli.rs
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
commr/: Cargo.toml
commr/src/: main.rs
commr/tests/: cli.rs
cutr/: Cargo.toml
cutr/src/: main.rs
cutr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: main.rs
findr/tests/: cli.rs
fortuner/: Cargo.toml
fortuner/src/: main.rs
fortuner/tests/: cli.rs
grepr/: Cargo.toml
grepr/src/: main.rs
grepr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: main.rs
headr/tests/: cli.rs
hello/: Cargo.toml
hello/tests/: cli.rs
learnr/: Cargo.toml
learnr/src/: lib.rs
lsr/: Cargo.toml
lsr/src/: main.rs
lsr/tests/: cli.rs
tailr/: Cargo.toml
tailr/src/: main.rs
tailr/tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: main.rs
uniqr/tests/: cli.rs
wcr/: Cargo.toml
wcr/src/: main.rs
wcr/tests/: cli.rs
