[workspace]
resolver = "3"
members = ["calr","catr", "commr", "cutr","echor", "findr", "fortuner", "grepr", "headr","hello", "learnr", "tailr", "uniqr", "wcr"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
assert_cmd = "2.1.2"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.8.5"
regex = "1.10.3"
walkdir = "2.4.0"
tempfile = "3.10.0"
ansi_term = "0.12.1"
assertables = "9.8.4"
