[package]
name = "calr"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
itertools.workspace = true
learnr.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
assertables.workspace = true
