[package]
name = "findr"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
