[package]
name = "grepr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
walkdir.workspace = true
ansi_term = "0.12.1"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
sys-info = "0.9.1"
