[package]
name = "lsr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd.workspace = true
assertables.workspace = true
learnr.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
