[package]
name = "tailr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
num = "0.4.1"
regex.workspace = true
once_cell = "1.19.0"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
rand.workspace = true
assertables = "9.8.4"
